# solana-onchain-bot

./: .env.exemple  .gitignore  Cargo.toml  README.md  build.rs
src/: balance.rs  birdeye.rs  bot.rs  consts.rs  helpers.rs  info.rs  lib.rs  margin.rs  market.rs  orders.rs  sol_price.rs  strategy.rs  types.rs
src/exec/: executor.rs  jupiter.rs  mod.rs
src/signal/: engine.rs  helpers.rs  mod.rs  types.rs
src/strats/: elder_triple_screen.rs  mod.rs  rsi_chop_swing.rs  rsi_classic.rs  rsi_ema_scalp.rs  sma_rsi_scalp_test.rs  srsi_adx_scalp.rs
