[package]
name = "engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
arraydeque = "0.5.1"
anyhow = "1.0.100"
base64 = "0.21.7"
bincode = "1.3.3"
dotenv = "0.15.0"
flume = "0.11.1"
kwant = { git = "https://github.com/0xNoSystem/Indicators_rs.git", branch = "main" }
log = "0.4.19"
reqwest = { version = "0.12", features = ["json"] }
rustc-hash = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
solana-account-decoder-client-types = "3.1.6"
solana-client = "3.1.6"
solana-commitment-config = "3.1.0"
solana-pubkey = "4.0.0"
solana-rpc-client-types = "3.1.6"
solana-transaction-status = "3.1.6"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
solana-sdk = "3.0.0"
env_logger = "0.11.8"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
chrono = { version = "0.4.39", features = ["clock"] }
